tests/neg/depfuns.scala
object Test {

  type T = (x: Int)

}  // error: `=>' expected
